more spacing fixes

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 .site-footer-container {
+  margin-top: $spacing-unit;
   background-color: rgba(0, 0, 0, 1);
   color: rgba(255, 255, 255, 1);
   $footer-height: calc($spacing-unit * 3.5);
