--- a/_sass/layout/_twocolumn.scss
+++ b/_sass/layout/_twocolumn.scss
@@ -1,15 +1,14 @@
 .two-column {
   $column-padding: calc($spacing-unit / 2);
-  margin-top: calc($spacing-unit * 0.8);
 
   display: flex;
   flex-direction: row;
 
   .side-column {
     width: calc($content-width * 0.23);
-    padding-top: $column-padding;
+    // padding-top: $column-padding;
     padding-right: $column-padding;
-    padding-bottom: $column-padding;
+    // padding-bottom: $column-padding;
 
     .date {
       text-transform: uppercase;
@@ -40,9 +39,9 @@
 
   .main-column {
     width: $main-column-width;
-    padding-top: $column-padding;
+    // padding-top: $column-padding;
     padding-left: $column-padding;
-    padding-bottom: $column-padding;
+    // padding-bottom: $column-padding;
 
     .subsection-header {
       margin-top: $spacing-unit;
