--- a/_sass/pages/_papers.scss
+++ b/_sass/pages/_papers.scss
@@ -1,10 +1,13 @@
 .papers {
-  $papers-spacing: calc($spacing-unit / 2);
   .papers-context {
-    padding-top: $papers-spacing;
+    padding-top: 0px;
   }
   .papers-container {
-    margin-top: $papers-spacing;
+    margin-top: $spacing-unit;
+
+        .section-header: {
+            margin-bottom: 0px !important;
+        }
   }
 
   .paper-list {
@@ -14,6 +17,9 @@
 
   .paper-list-item-container {
     margin-top: 0px;
+    padding-top: calc($spacing-unit / 2);
+    padding-bottom: calc($spacing-unit / 2);
+
   }
 
   .paper-list-item > p {
