--- a/_sass/pages/_people.scss
+++ b/_sass/pages/_people.scss
@@ -1,45 +1,44 @@
 .people-list-container {
-  padding-top: calc($spacing-unit / 2);
-}
-.people-list {
-  list-style-type: none;
-  margin-left: 0px;
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 100% !important;
-}
+  .people-list {
+    list-style-type: none;
+    margin-left: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100% !important;
+  }
 
-.people-list-item {
-  flex: 50%;
-  display: flex;
-  flex-direction: row;
-  margin-bottom: 10px;
+  .people-list-item {
+    flex: 50%;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 10px;
 
-  .thumbnail-container {
-    width: 100px;
-    height: 100%;
+    .thumbnail-container {
+      width: 100px;
+      height: 100%;
 
-    .placeholder-pic-container {
-      height: 110px;
-      padding: calc($spacing-unit / 3);
-      border: 3px solid black;
-      display: flex;
-      flex-align: row;
-      justify-content: center;
-      align-items: center;
+      .placeholder-pic-container {
+        height: 110px;
+        padding: calc($spacing-unit / 3);
+        border: 3px solid black;
+        display: flex;
+        flex-align: row;
+        justify-content: center;
+        align-items: center;
 
-      .placeholder-pic {
-        font-size: 3em;
+        .placeholder-pic {
+          font-size: 3em;
+        }
       }
     }
   }
-}
 
-.people-list-item-content-container {
-  margin-left: 10px;
-  padding: 10px;
-}
+  .people-list-item-content-container {
+    margin-left: 10px;
+    padding: 10px;
+  }
 
-.people-list-item-content-container > p {
-  margin-bottom: 0px;
+  .people-list-item-content-container > p {
+    margin-bottom: 0px;
+  }
 }
